copy styles from cond format between different docs, fdo#59159

Change-Id: I5472ab648b248d925f1f07cd4194c1201230ff20
Reviewed-on: https://gerrit.libreoffice.org/1779
Reviewed-by: Petr Mladek <pmladek@suse.cz>
Tested-by: Petr Mladek <pmladek@suse.cz>